--- a/src/main/resources/CSS/style2.css
+++ b/src/main/resources/CSS/style2.css
@@ -5,6 +5,10 @@
 .GridPane  {
     fx-alignment: center;
 }
+.gridpane{
+     /*-fx-background-color: royalblue;*/
+    -fx-background-image:url("../images/image.jpg")  ;
+}
 .Farmacia1:hover{
 
     -fx-scale-x:1.1;
@@ -18,6 +22,7 @@
     -fx-effect: dropshadow(one-pass-box, red, 5, 1.0, 5, 3);
 }
 #button1 {
+
     -fx-alignment:center;
-    -fx-graphic:"@../../../../../../Desktop/1.jpg";
+
 }
